# Medical-RAG-Chatbot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  create_vectorstore.py  pyproject.toml  pytest.ini  src_structure.txt
.github/workflows/: cd.yml  ci.yml  quality.yml
.streamlit/: config.toml
docs/: CONFIG_BASED_EMBEDDINGS.md  DUPLICATE_LOGGING_FIX.md  EVALUATION_REORGANIZATION_COMPLETE.md  EVALUATION_SCRIPTS_ANALYSIS.md  LANGSMITH_EVALUATION_FIX.md  LANGSMITH_FIX_COMPLETE.md  LANGSMITH_TRACKING_GUIDE.md  OBSERVABILITY_FOLDER_LOCATION.md  PDF_INGESTER_ANALYSIS.md  PROMPT_FILE_ANALYSIS.md  PROMPT_FILE_INTEGRATION.md  ROOT_TEST_FILES_ANALYSIS.md  SPACY_MODEL_FIX.md  TEST_REORGANIZATION_COMPLETE.md  UNIT_TESTING_PLAN.md
evaluation/results/: eval_medical_eval_groq_144346.csv
src/: multi_embedding.py
src/config/: settings.py
src/content_analyzer/: QUICK_START.py  __init__.py  config.py  demo.py  ner_detector.py  output_guardrails.py  pii_detector.py  pii_detector_presidio.py  toxic_detector.py  toxic_detector_ml.py  utils.py  validator.py
src/model/: llm_factory.py
src/observability/: evaluation.py  langsmith_config.py  monitoring.py  tracing.py
src/prompts/: medical_assistant.txt
src/storage/: gcs_handler.py
src/utils/: exceptions.py  logger.py
tests/: output.txt
tests/evaluation/: README.md  __init__.py  evaluate_chatbot.py
tests/giskard/: __init__.py  config.py  model_wrapper.py  rag_evaluation.py  run_tests.py  security_tests.py  test_data.py
tests/integration/: README.md  __init__.py  conftest.py  test_config_integration.py  test_content_analyzer_integration.py  test_fixes.py  test_llm_factory_integration.py  test_observability.py  test_rag_pipeline_integration.py
tests/promptfoo/: README.md  promptfoo_wrapper.py
tests/unit/: conftest.py  test_app.py
tests/unit/test_config/: test_settings.py
tests/unit/test_content_analyzer/: test_output_guardrails.py  test_pii_detector.py  test_toxic_detector.py
tests/unit/test_model/: test_llm_factory.py
(+5 files in other folders)
